# ratpak-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  cargo.toml
.github/workflows/: ci.yml
bridge/: bridge.cpp  bridge.h  compat.h
examples/: calc_example.rs  rough_edges.rs
src/: error.rs  ffi.rs  lib.rs  rational.rs
tests/: test.rs
