[package]
name = "ratpak-rs"
version = "0.1.0"
edition = "2021"
description = "Safe Rust wrapper for Windows Calculator's Ratpack engine"

[build-dependencies]
cc = "1.0"

[[example]]
name = "calc_example"
path = "examples/calc_example.rs"

[[example]]
name = "rough_edges"
path = "examples/rough_edges.rs"